--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="http://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Fresca&display=swap" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,6 +22,8 @@
 
                     <div class="decisiones">
                         <p>Eso no es Amor</p>
+
+                        <img src="img/png/narradora_saludo.png" alt="1" class="narradora-saludo">
                     </div>
 
                     <div class="contenedor-icono-costado-der">
@@ -37,6 +41,10 @@
                         <img src="img/png/bajando-escalera1.png" alt="1" class="bajando-escalera">
                     </div>
 
+                    <div class="cuento escena1-texto">
+                        <p>Era verano, 8 de enero para ser precisos. Me levante temprano, era una fecha especial, llevaba semanas planeándole esta sorpresa a mi madre y nada podía salir mal. Baje por las escaleras corriendo. Mi abuela estaba terminando de preparar el desayuno</p>
+                    </div>
+
                     <div class="contenedor-icono">
                         <p><a href="#"><i class="fas fa-chevron-down"></i></a></p>
                     </div>
@@ -49,6 +57,10 @@
         
         <div class="section escena2">
             <div>
+
+                <div class="cuento escena2-texto">
+                    <p>El olor a café y Tostadas deleitaban mi estomago. Mi abuela me había ayudado con todos los preparativos de la fiesta. La salude, y le pregunte si ya estaba todo listo, ella asintió con la cabeza, y continuó bebiendo su café.</p>
+                </div>
 
                 <img src="img/png/silla.png" alt="2" class="silla">
 
@@ -90,11 +102,12 @@
             <article class="slide">
                 <div class="section seleccion-desayuno">
 
-                    <div>
-
+                    <div class="cuento escena3-texto">
+                        <p>Mientras desayunábamos, se levantó mi madre. Su mal humor se notaba a leguas, pero no le di importancia. Corrí hacia ella gritando: “¡Feliz Cumpleeee!”. Pero ella en su mal humor, solo respondió, “Va a ser feliz el día que me enorgullezcan tus notas escolares”. Yo me había llevado algunas materias y seguía enfadada conmigo por eso.</p>
                     </div>
 
-                        <div class="mermelada">
+                        <div>
+
                             <img src="img/png/silla.png" alt="6" class="silla1">
                        
                             <!-- <img src="img/png/puerta.png" alt="7" class="puerta1"> -->
@@ -117,6 +130,10 @@
 
             <article class="slide">
                 <div class="section seleccion-desayuno">
+
+                    <div class="cuento escena3-texto">
+                        <p>Mientras desayunábamos, se levantó mi madre. Su mal humor se notaba a leguas, pero no le di importancia. Corrí hacia ella gritando: “¡Feliz Cumpleeee!”. Pero ella en su mal humor, solo respondió, “Va a ser feliz el día que me enorgullezcan tus notas escolares”. Yo me había llevado algunas materias y seguía enfadada conmigo por eso.</p>
+                    </div>
 
                     <div class="ddl">
                         <img src="img/png/silla.png" alt="11" class="silla1">
@@ -143,6 +160,10 @@
 
         <div class="section escena4">
 
+            <div class="cuento escena4-texto">
+                <p>Al terminar de desayunar eran casi las 10. Yo empecé a ponerme inquieta, ya que a las 11 llegaban los invitados, y mi madre no se había ni cambiado su viejo pijama. La mire a mi abuela, con un gesto de alarma, y ella automáticamente le pidió a mi madre que la acompañara a hacer unos trámites. Mi madre se negó, y me pidió que fuera en su lugar, pero por obvias y secretas razones yo no podía. Gran Error, ella se levanto de la mesa enojada por desobedecer y comenzó a abofetearme.</p>
+            </div>
+
             <img src="img/png/madre-mala1.png" alt="16" class="madre-mala">
 
             <img src="img/png/nena-llora.png" alt="17" class="nena-llora">
@@ -155,8 +176,9 @@
         <!--********************************* Escena 5 ********************************* -->
 
         <div class="section escena5">
-            <div>
-                <h1>Escena 5</h1>
+
+            <div class="cuento escena5-texto">
+                <p>Termine diciéndole la verdad, que no podía porque le había planeado una fiesta sorpresa, para ver si esto la calmaba, pero no. Ella enfureció aun más, pues evidentemente, ya sabía de la fiesta, y la idea no le agradaba, comenzó a pegarme aun más, a pesar de mis gritos y pedidos de auxilio. Mi abuela, desde la cocina, escucho mis gritos y fue a detener a mi madre lo más rápido que pudo, ella me pidió que corriera y me encerrara en mi habitación y se quedo peleando con mi madre para que se calmara..</p>
             </div>
 
             <img src="img/png/nena-pelea.png" alt="16" class="nena-pelea">
@@ -173,6 +195,10 @@
         <!--********************************* Escena 6 ********************************* -->
 
         <div class="section escena6">
+
+            <div class="cuento escena6-texto">
+                <p>Ya en mi habitación, trabé la puerta con algunos muebles para evitar que alguien entrara. Pasaron algunas horas, y yo seguía encerrada llorando, en eso mi abuela golpeo a la puerta, cuando abrí, me comentó que mi madre se había ido de la casa, que volvería en unas horas mas tranquila. Yo en medio de lagrimas le pregunté por qué mi madre me odiaba tanto, a lo que mi abuela negó con la cabeza y dijo que ella no me odiaba, pero no sabía amar de otra forma, yo la abracé y le dije: “no es justo Eso No Es Amor”.</p>
+            </div>
 
             <img src="img/png/nena-panico.png" alt="16" class="nena-panico">
 
@@ -206,6 +232,10 @@
             <article class="slide">
                 <div class="seleccion-final">
 
+                    <div class="cuento final1-texto">
+                        <p>Con el pasar de los años entendí, que esa vida no era la que quería para mi, y empecé a canalizar todo escribiendo. Al terminar el secundario inicie la carrera de psicología, durante la cual, termine lo que después se convirtió en mi primer libro. Me encargué de concientizar por todos los medios posibles acerca de este tipo de maltrato y empecé a atender a niños y niñas que pasaron por lo mismo que yo, apoyándolos y ayudando a los padres a no seguir las líneas de la violencia para educar a sus hijos.</p>
+                    </div>
+
                     <img src="img/png/psicologa.png" alt="16" class="psicologa">
 
                     <div class="contenedor-icono0">
@@ -218,6 +248,10 @@
 
             <article class="slide">
                 <div class="seleccion-final">
+
+                    <div class="cuento final2-texto">
+                        <p>Ya pasaron casi 25 años de eso. Actualmente tengo una hermosa niña, con la que trato a diario de educar con amor, aprendí que la violencia no lleva a ningún lado, y después de varios años de terapia logré apagar la rabia que mi madre me había contagiado, para no seguir sus pasos. Ojalá todos los padres puedan aprender esto algún día, y que la violencia infantil deje de ser algo normalizado por las personas.</p>
+                    </div>
 
                     <img src="img/png/madre-hija.png" alt="16" class="madre-hija">
 
@@ -249,7 +283,8 @@
                 <div class="section estadisticas2">
 
                     <div class="decisiones">
-                        <p>En consecuencia, los adultos que han sufrido maltrato en la infancia corren mayor riesgo de sufrir problemas conductuales, físicos y mentales. Tengamos siempre en cuenta esto, ya que con una pronta ayuda terapéutica podríamos mejorar la calidad de vida de nuestros chicos.</p>
+                        <p>En consecuencia, los adultos que han sufrido maltrato en la infancia corren mayor riesgo de sufrir problemas conductuales, físicos y mentales. <br><br>
+                        Tengamos siempre en cuenta esto, ya que con una pronta ayuda terapéutica podríamos mejorar la calidad de vida de nuestros chicos.</p>
                     </div>
 
                     <div class="contenedor-icono-costado-der">
